# Marine_Accident_Risk_Prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: default.yaml
notebooks/: 01_demo_pipeline.ipynb
reports/ablation/: ablation_report.md  negative_ratio_table.csv  summary.json
reports/drift/: drift_table.csv  summary.json
reports/threshold/: summary.json  threshold_report.md  threshold_table.csv
scripts/: run_drift_analysis.py  run_negative_ratio_ablation.py  run_threshold_analysis.py
src/marine_accident_risk/: cli.py  config.py
src/marine_accident_risk/api/: app.py
src/marine_accident_risk/dashboard/: app.py
src/marine_accident_risk/data/: accidents.py  data_go_kr_client.py  grid.py  nmpnt_client.py
src/marine_accident_risk/eval/: __init__.py  drift.py  oof.py  threshold.py
src/marine_accident_risk/features/: build.py
